# koxidize

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/cli/: deploy_nginx.rs  expose_service.rs  list_pods.rs  port_forward.rs
