[package]
name = "koxidize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version="4.1.1", features=["derive"]}
futures = "0.3.25"
k8s-openapi = {version="0.17.0", features=["v1_26"]}
kube = {version="0.78.0", features=["runtime", "derive", "client", "ws"]}
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.91"
tokio = {version="1.24.1", features=["full"]}
tokio-stream = {version="0.1.11", features=["net"]}
tracing-subscriber = "0.3.16"
